# dev-templates

./: .gitignore  README.md  flake.nix
graphite/: README.md  flake.nix
neovim/: flake.nix
nextjs/: flake.nix  next.config.mjs  package.json  playwright-version.sh  tailwind.config.js
nextjs/src/: mdx-components.tsx
nextjs/src/app/: layout.tsx
nextjs/src/app/snippets/example/: ArchitectureContainers.jsx
nextjs/src/components/: ArticleLayout.jsx
nextjs/src/lib/: generateRssFeed.js  getFiles.js
node/: .gitignore  README.md  tsconfig.json
node/src/app/: page.tsx  providers.jsx
node/src/app/snippets/: layout.tsx  page.tsx
node/src/app/snippets/example/: page.mdx
node/src/app/tutorials/: layout.tsx  page.tsx
node/src/lib/: formatDate.js
node/tests/: example.spec.ts
pnpm/: .editorconfig  .gitignore  README.md  flake.nix  justfile  package.json
python/: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  justfile  main.py  pyproject.toml
python/.github/: dependabot.yml
python/changeme/: main.py
rust/: .gitignore  Dockerfile  README.md  flake.nix  justfile
rust/.github/workflows/: build-and-test.yml
